[package]
name = "tui-image"
description = "An image viewer widget for tui-rs"
homepage = "https://github.com/arraypad/tui-image"
repository = "https://github.com/arraypad/tui-image"
version = "0.1.0"
authors = ["Arpad Ray <arraypad@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["terminal", "image", "tui", "widget"]

[dependencies]
tui = "0.5"
failure = "0.1.6"
image = "0.19.0"
